// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateConfig Checking if empty update doesnt change anything 1`] = `
{
  "embeddingCategoricalMain": {
    "config": {
      "axes": {
        "defaultValues": [
          "x",
          "y",
        ],
        "domainWidth": 2,
        "gridOpacity": 0,
        "gridWidth": 10,
        "labelFontSize": 12,
        "offset": 0,
        "titleFontSize": 13,
        "xAxisRotateLabels": false,
        "xAxisText": "Umap 1",
        "yAxisText": "Umap 2",
      },
      "axesRanges": {
        "xAxisAuto": true,
        "xMax": 10,
        "xMin": 0,
        "yAxisAuto": true,
        "yMax": 10,
        "yMin": 0,
      },
      "colour": {
        "gradient": "default",
        "invert": "standard",
        "masterColour": "#000000",
        "reverseColourBar": false,
        "toggleInvert": "#FFFFFF",
      },
      "dimensions": {
        "height": 550,
        "width": 700,
      },
      "fontStyle": {
        "colour": "#000000",
        "font": "sans-serif",
      },
      "labels": {
        "enabled": false,
        "size": 18,
      },
      "legend": {
        "colour": "#000000",
        "enabled": true,
        "position": "right",
        "showAlert": false,
      },
      "marker": {
        "opacity": 5,
        "shape": "circle",
        "showOpacity": true,
        "size": 5,
      },
      "selectedCellSet": "louvain",
      "selectedSample": "All",
      "spec": "1.0.0",
      "title": {
        "anchor": "start",
        "dx": 10,
        "fontSize": 20,
        "text": "",
      },
    },
    "error": false,
    "experimentId": "1234",
    "loading": false,
    "outstandingChanges": true,
    "plotData": [],
    "plotType": "embeddingCategorical",
  },
}
`;

exports[`updateConfig Checking if fields changed 1`] = `
{
  "volcanoPlotMain": {
    "config": {
      "axes": {
        "domainWidth": 2,
        "gridOpacity": 5,
        "gridWidth": 10,
        "labelFontSize": 12,
        "offset": 10,
        "titleFontSize": 13,
        "xAxisRotateLabels": false,
        "xAxisText": "log fold change",
        "yAxisText": "-log10(adj p-value)",
      },
      "axesRanges": {
        "xAxisAuto": true,
        "xMax": 10,
        "xMin": 0,
        "yAxisAuto": true,
        "yMax": 10,
        "yMin": 0,
      },
      "colour": {
        "gradient": "default",
        "invert": "standard",
        "masterColour": "#000000",
        "reverseColourBar": false,
        "toggleInvert": "#FFFFFF",
      },
      "dimensions": {
        "height": 500,
        "width": 500,
      },
      "downsampleRatio": 0,
      "fontStyle": {
        "colour": "#000000",
        "font": "sans-serif",
      },
      "height": 2000,
      "labels": {
        "enabled": true,
        "size": 18,
      },
      "legend": {
        "colour": "#000000",
        "enabled": true,
        "position": "bottom-right",
        "showAlert": false,
      },
      "logFoldChangeDomain": 1,
      "logFoldChangeThreshold": 1,
      "logFoldChangeThresholdColor": "#ff0000",
      "logFoldChangeTickCount": 5,
      "marker": {
        "opacity": 5,
        "shape": "circle",
        "showOpacity": false,
        "size": 32,
      },
      "maxNegativeLogpValueDomain": 50,
      "negLogpValueThreshold": 4,
      "negativeLogpValueTickCount": 5,
      "noDifferenceColor": "#aaaaaa",
      "pvalueThresholdColor": "#ff0000",
      "showLogFoldChangeThresholdGuides": true,
      "showpvalueThresholdGuides": true,
      "significantDownregulatedColor": "#ff0000",
      "significantUpregulatedColor": "#0000ffaa",
      "spec": "1.0.0",
      "strokeCol": "#000000",
      "strokeOpa": 1,
      "textThresholdValue": 240,
      "thresholdGuideWidth": 1,
      "title": {
        "anchor": "start",
        "dx": 10,
        "fontSize": 15,
        "text": "",
      },
      "xAxisAuto": true,
      "yAxisAuto": true,
    },
    "error": false,
    "experimentId": "1234",
    "loading": false,
    "outstandingChanges": true,
    "plotData": [],
    "plotType": "volcano",
  },
}
`;
